--- a/index.html
+++ b/index.html
@@ -63,29 +63,6 @@
                   </div> <!-- end .button -->
                 </div> <!-- end .content -->
               </div> <!-- end .top > .container> .row> .col-md-7 -->
-
-             <div class="col-sm-5 col-md-5">
-                             <div class="col-lg-9">You send
-                                  <div class="input-group">
-                                    <input type="text" class="form-control">
-                                    <div class="input-group-btn">
-                                      <button type="button" class="btn btn-default dropdown-toggle"
-                                        data-toggle="dropdown">
-                                        Action <span class="caret"></span>
-                                      </button>
-                                      <ul class="dropdown-menu pull-right">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                      </ul>
-                                    </div>
-                                    <!-- /btn-group -->
-                                  </div>
-                                 <!-- /input-group -->
-                             </div>
-              </div> <!-- end .top > .container> .row> .col-md-5 -->
                  <div class="col-sm-5 col-md-5">
                              <div class="col-lg-9">They receive
                                   <div class="input-group">
@@ -330,8 +307,8 @@
                       <img src="images/01.jpg" alt="">
                     </div> <!-- end .image -->
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
-                      <h4>Jon Doe</h4>
+                      <p>Really love the application.</p>
+                      <h4>Julia Kim</h4>
                       <h5>Web developer</h5>
                     </div> <!-- end .content -->
                   </div> <!-- end .item (1) -->
@@ -341,23 +318,11 @@
                       <img src="images/02.jpg" alt="">
                     </div> <!-- end .image -->
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
-                      <h4>Jon Doe</h4>
+                      <p>I have been waiting for such a solution, thanks guys!</p>
+                      <h4>Jon Otieno</h4>
                       <h5>Web developer</h5>
                     </div> <!-- end .content -->
                   </div> <!-- end .item (2) -->
-
-                  <div class="item next left">
-                    <div class="image">
-                      <img src="images/03.jpg" alt="">
-                    </div> <!-- end .image -->
-                    <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
-                      <h4>Jon Doe</h4>
-                      <h5>Web developer</h5>
-                    </div> <!-- end .content -->
-                  </div> <!-- end .item (3) -->
-
                 </div> <!-- end .carousel-inner -->
               </div> <!-- end #carousel-testimonial -->
             </div> <!-- end .testimonial-slide -->
@@ -401,7 +366,7 @@ We might just be helping people build a better world.</p>
                   </div> <!-- end .details -->
                 </div> <!-- end .member -->
                 <div class="title">
-                  <h4>Margery Key</h4>
+                  <h4>Julius Ngigi</h4>
                   <h5>Lead Developer</h5>
                 </div> <!-- end .title -->
               </div> <!-- end .info (1) -->
@@ -410,7 +375,7 @@ We might just be helping people build a better world.</p>
                 <div class="member">
                   <img src="images/02.jpg" alt="">
                   <div class="details">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veniam molestias saepe ipsa autem, odio.</p>
+                    <p>Julius is a mobile developer based in Nairobi.</p>
                     <div class="social icon">
                       <ul>
                         <li><a href=""><i class="fa fa-twitter"></i></a></li>
@@ -422,8 +387,8 @@ We might just be helping people build a better world.</p>
                   </div> <!-- end .details -->
                 </div> <!-- end .member -->
                 <div class="title">
-                  <h4>Shirley Bergeron</h4>
-                  <h5>UI/UX Designer</h5>
+                  <h4>Bongane Tshabangu</h4>
+                  <h5>Business Lead</h5>
                 </div> <!-- end .title -->
               </div> <!-- end .info (2) -->
 
@@ -431,7 +396,7 @@ We might just be helping people build a better world.</p>
                 <div class="member">
                   <img src="images/03.jpg" alt="">
                   <div class="details">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veniam molestias saepe ipsa autem, odio.</p>
+                    <p>Bongane has been working for consulting businesses in South Africa.</p>
                     <div class="social icon">
                       <ul>
                         <li><a href=""><i class="fa fa-twitter"></i></a></li>
@@ -442,31 +407,6 @@ We might just be helping people build a better world.</p>
                     </div> <!-- end .icon -->
                   </div> <!-- end .details -->
                 </div> <!-- end .member -->
-                <div class="title">
-                  <h4>Ryan Elder</h4>
-                  <h5>Front End Developer</h5>
-                </div> <!-- end .title -->
-              </div> <!-- end .info (3) -->
-
-              <div class="col-sm-6 col-md-6 col-lg-3 info">
-                <div class="member">
-                  <img src="images/04.jpg" alt="">
-                  <div class="details">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veniam molestias saepe ipsa autem, odio.</p>
-                    <div class="social icon">
-                      <ul>
-                        <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                      </ul>
-                    </div> <!-- end .icon -->
-                  </div> <!-- end .details -->
-                </div> <!-- end .member -->
-                <div class="title">
-                  <h4>Daisy Baker</h4>
-                  <h5>Marketer</h5>
-                </div> <!-- end .title -->
               </div> <!-- end .info (4) -->
 
             </div> <!-- end .app-dev -->
