--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@ We might just be helping people build a better world.</p>
                   </div> <!-- end .details -->
                 </div> <!-- end .member -->
                 <div class="title">
-                  <h4>Bongane Tshabangu</h4>
-                  <h5>Business Lead</h5>
+                  <h4>Julius Ngigi</h4>
+                  <h5>Lead Developer</h5>
                 </div> <!-- end .title -->
               </div> <!-- end .info (2) -->
 
@@ -370,6 +370,10 @@ We might just be helping people build a better world.</p>
                     </div> <!-- end .icon -->
                   </div> <!-- end .details -->
                 </div> <!-- end .member -->
+                <div class="title">
+                  <h4>Bongane Tshabangu</h4>
+                  <h5>Business Lead</h5>
+                </div> <!-- end .title -->
               </div> <!-- end .info (4) -->
 
             </div> <!-- end .app-dev -->
